--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uz.open_work.uz.open_work">
    <application
-        android:label="open_work"
+        android:label="Open Work"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
